--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
   "private": true,
   "dependencies": {
-    "gulp": "^3.8.8",
+    "history": "^1.12.5",
     "jquery": "^2.0",
     "lodash": "^3.10.1",
+    "number-is-nan": "^1.0.0",
     "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-redux": "^3.1.0",
+    "react-router": "^1.0.0-rc3",
     "redux": "^3.0.2"
   },
   "devDependencies": {
     "babel": "^5.8.23",
     "babel-core": "^5.8.23",
+    "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
     "babel-plugin-react-transform": "^1.1.1",
     "babel-runtime": "^5.8.20",
     "bootstrap-sass": "^3.0.0",
     "chunk-manifest-webpack-plugin": "*",
+    "gulp": "^3.8.8",
     "jstransform-loader": "*",
     "jsx-control-statements": "*",
     "jsx-loader": "*",
     "laravel-elixir": "^3.0.0",
+    "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
+    "redbox-react": "^1.1.1",
     "redux-devtools": "^2.1.5",
     "webpack": "^1.12.1",
     "webpack-dev-middleware": "^1.2.0",
